2007-07-09  Ævar Arnfjörð Bjarmason  <avar@cpan.org> (0.01)

	* Initial release
