@@ -9,11 +9,13 @@ inc/Module/Install/Include.pm
 inc/Module/Install/Makefile.pm
 inc/Module/Install/Makefile/Version.pm
 inc/Module/Install/Metadata.pm
+inc/Module/Install/Scripts.pm
 inc/Module/Install/Win32.pm
 inc/Module/Install/WriteAll.pm
 LED.pm
 Makefile.PL
 MANIFEST			This list of files
 META.yml
+script/lapled
 t/00-compile.t
 t/synopsis.t
