@@ -1,3 +1,8 @@
+2007-07-09  Ævar Arnfjörð Bjarmason  <avar@cpan.org> (0.02)
+
+	* script/lapled: User program for flipping the led switch
+	* LED.pm: code formatting in synopsis
+
 2007-07-09  Ævar Arnfjörð Bjarmason  <avar@cpan.org> (0.01)
 
 	* Initial release
